# FuseHide

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml  build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/io/github/xiaotong6666/fusefixer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fusefixer.cpp  fusehide.cpp
app/src/main/cpp/fusefixer/: fuse_wrappers.cpp  runtime_state.cpp  state.hpp
app/src/main/cpp/fusehide/: dirent_filter.cpp  dirent_filter.hpp  fuse_wrappers.cpp  path_policy.cpp  path_policy.hpp  reply_buf_filter.cpp  reply_buf_filter.hpp  runtime_state.cpp  state.hpp
app/src/main/cpp/fusehide/core/: anchor_state.cpp  runtime_state.cpp  state.hpp
app/src/main/cpp/fusehide/elf/: elf_utils.cpp  elf_utils.hpp
app/src/main/cpp/fusehide/filters/: dirent_filter.cpp
app/src/main/cpp/fusehide/hooks/: fuse_wrappers.cpp  hook_install.cpp  payload_builtin.cpp  payload_builtin.hpp  wrappers.hpp
app/src/main/cpp/fusehide/jni/: jni_entry.cpp
app/src/main/cpp/fusehide/policy/: path_policy.cpp
app/src/main/java/io/github/xiaotong6666/fusefixer/: MainActivity.kt
app/src/main/res/drawable/: ic_info.xml  ic_launcher.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
baselineprofile/: build.gradle.kts
docs/: architecture.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
xposed-stubs/: build.gradle.kts
(+60 files in other folders)
